Bug 1428184 - copy mStreams before iterating the array. r=bechen,gerald

It is bad to modify the array while iterating it.

MozReview-Commit-ID: JbpoRmM7GqP